feat: login with jwt tules added
