# docs/swagger.json
@@ -4,45 +4,7 @@
         "contact": {}
     },
     "paths": {
-        "/auth/login": {
-            "post": {
-                "tags": [
-                    "Authentication"
-                ],
-                "parameters": [
-                    {
-                        "description": "login",
-                        "name": "user",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/memorize_internal_service_authentication.LoginUserRequest"
-                        }
-                    }
-                ],
-                "responses": {}
-            }
-        },
-        "/auth/register": {
-            "post": {
-                "tags": [
-                    "Authentication"
-                ],
-                "parameters": [
-                    {
-                        "description": "register",
-                        "name": "user",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/memorize_internal_service_authentication.RegisterUserRequest"
-                        }
-                    }
-                ],
-                "responses": {}
-            }
-        },
-        "/users": {
+        "/admin/users": {
             "get": {
                 "tags": [
                     "Users"
@@ -81,7 +43,7 @@
                 "responses": {}
             }
         },
-        "/users/{id}": {
+        "/admin/users/{id}": {
             "get": {
                 "tags": [
                     "Users"
@@ -132,6 +94,44 @@
                         "name": "id",
                         "in": "path",
                         "required": true
+                    }
+                ],
+                "responses": {}
+            }
+        },
+        "/auth/login": {
+            "post": {
+                "tags": [
+                    "Authentication"
+                ],
+                "parameters": [
+                    {
+                        "description": "login",
+                        "name": "user",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/memorize_internal_service_authentication.LoginUserRequest"
+                        }
+                    }
+                ],
+                "responses": {}
+            }
+        },
+        "/auth/register": {
+            "post": {
+                "tags": [
+                    "Authentication"
+                ],
+                "parameters": [
+                    {
+                        "description": "register",
+                        "name": "user",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/memorize_internal_service_authentication.RegisterUserRequest"
+                        }
                     }
                 ],
                 "responses": {}
