# internal/handler/authentication/user/user_handler.go
@@ -25,7 +25,7 @@ func NewUserHandler(userService *user.UserService,
 // @Tags Users
 // @Param page query int false "Page"
 // @Param page_size query int false "Page size"
-// @Router /users [get]
+// @Router /admin/users [get]
 func (ctrl *UserHandler) ListUsers(c *gin.Context) {
 	filters := []repository.Filter{}
 	if username := c.Query("username"); username != "" {
@@ -62,7 +62,7 @@ func (ctrl *UserHandler) ListUsers(c *gin.Context) {
 
 // @Tags Users
 // @Param id path int true "id"
-// @Router /users/{id} [get]
+// @Router /admin/users/{id} [get]
 func (ctrl *UserHandler) GetUserByID(c *gin.Context) {
 	id, err := strconv.Atoi(c.Param("id"))
 	if err != nil {
@@ -81,7 +81,7 @@ func (ctrl *UserHandler) GetUserByID(c *gin.Context) {
 
 // @Tags Users
 // @Param user body user.CreateUserRequest true "entity to create"
-// @Router /users [post]
+// @Router /admin/users [post]
 func (ctrl *UserHandler) CreateUser(c *gin.Context) {
 	var req user.CreateUserRequest
 	if err := c.ShouldBindJSON(&req); err != nil {
@@ -106,7 +106,7 @@ func (ctrl *UserHandler) CreateUser(c *gin.Context) {
 // @Tags Users
 // @Param id path uint true "id"
 // @Param user body user.UpdateUserRequest true "entity to update"
-// @Router /users/{id} [put]
+// @Router /admin/users/{id} [put]
 func (ctrl *UserHandler) UpdateUser(c *gin.Context) {
 	id, err := strconv.Atoi(c.Param("id"))
 	if err != nil {
@@ -137,7 +137,7 @@ func (ctrl *UserHandler) UpdateUser(c *gin.Context) {
 
 // @Tags Users
 // @Param id path uint true "id"
-// @Router /users/{id} [delete]
+// @Router /admin/users/{id} [delete]
 func (ctrl *UserHandler) DeleteUser(c *gin.Context) {
 	id, err := strconv.Atoi(c.Param("id"))
 	if err != nil {
